<resources>
    <string name="app_name">Przygotowanie do egzaminów by TE3SOFT</string>
    <string name="witamy_w_aplikacji_zawieraj_cej_materia_przygotowawczy_do_egzamin_w_zawodowych_z_zakresu_informatyki">Witamy w aplikacji zawierającej materiał przygotowawczy do egzaminów zawodowych z zakresu informatyki.</string>
    <string name="arytmetyka_komputera">arytmetyka komputera</string>
    <string name="uk_ady_cyfrowe">układy cyfrowe</string>
    <string name="budowa_jednostki_centralnej_komputera">budowa jednostki centralnej komputera</string>
    <string name="schemat_logicznej_budowy_komputera">schemat logicznej budowy komputera</string>
    <string name="p_yta_g_wna">płyta główna</string>
    <string name="procesory">procesory</string>
    <string name="pami_wewn_trzna">pamięć wewnętrzna</string>
    <string name="chipsety">chipsety</string>
    <string name="gniazda_rozszerze_i_magistrale">gniazda rozszerzeń i magistrale</string>
    <string name="logo">logo</string>
    <string name="todo">TODO</string>
    <string name="textview">TextView</string>
    <string name="tytul">tytul</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="title_activity_budowa">budowa</string>
    <string name="najmniejsz_jednostk_informacji_przetwarzan_przez_komputery_jest_bit_reprezentuje_on_warto_ci_0_lub_1_bajt_to_osiem_bit_w">Najmniejszą jednostką informacji przetwarzaną przez komputery jest bit. Reprezentuje on wartości 0 lub 1. Bajt to osiem bitów.</string>
    <string name="arytmetyka_komputera1">Arytmetyka komputera</string>
    <string name="uk_ady_cyfrowe_1">Układy cyfrowe</string>
    <string name="uk_ady_cyfrowe_to_rodzaj_uk_ad_w_elektronicznych_w_kt_rych_sygna_y_napi_ciowe_przyjmuj_tylko_okre_lon_liczb_stan_w_z_przypisanymi_im_warto_ciami_liczbowymi_operacje_realizowane_przez_te_uk_ady_mo_emy_opisa_za_pomoc_j_zyka_logiki_matematycznej_zgodnie_z_algebr_boole_a"><![CDATA[Układy cyfrowe to rodzaj układów elektronicznych, w których sygnały napięciowe przyjmują tylko określoną liczbę stanów z przypisanymi im wartościami liczbowymi. Operacje realizowane przez te układy możemy opisać za pomocą języka logiki matematycznej, zgodnie z algebrą Boole`a. ]]></string>
    <string name="mamy_dwa_typy_uk_ad_w_cyfrowych_uk_ady_kombinacyjne_sygna_y_wyj_ciowe_zmieniaj_si_w_chwili_zmian_sygna_w_wej_ciowych_a_ka_dy_stan_wej_okre_la_jednoznacznie_stan_wyj_cia_uk_ady_sekwencyjne_stan_wyj_zale_y_od_stanu_wej_oraz_poprzednich_stan_w_wej_zapami_tanych_w_uk_adzie">Mamy dwa typy układów cyfrowych: układy kombinacyjne - sygnały wyjściowe zmieniają się w chwili zmian sygnałów wejściowych, a każdy stan wejść określa jednoznacznie stan wyjścia układy sekwencyjne - stan wyjść zależy od stanu wejść oraz poprzednich stanów wejść zapamiętanych w układzie.</string>
    <string name="liczniki_to_uk_ady_sekwencyjne_zbudowane_z_przerzutnik_w_symetrycznych_kt_re_s_u_do_zliczania_i_zapami_tywania_liczby_impuls_w_podawanych_na_wej_cia_zliczaj_ce_rejestry_to_uk_ady_sekwencyjne_zbudowane_z_przerzutnik_w_s_u_ce_do_chwilowego_przechowywania_niewielkiej_ilo_ci_danych_ze_wzgl_du_na_spos_b_zapisu_i_odczytu_informacji_rejestry_dzielimy_na_szeregowe_informacja_wprowadzana_jest_bit_po_bicie_ten_rejestr_ma_jedno_wej_cie_i_jedno_wyj_cie_r_wnoleg_e_ca_e_s_owo_jest_wprowadzane_jednocze_nie_ten_rejestr_ma_liczb_wej_i_wyj_r_wn_liczbie_przerzutnik_w_r_wnoleg_o_szeregowe_informacja_jest_wprowadzana_r_wnolegle_a_wyprowadzana_szeregowo_rejestr_ma_jedno_wyj_cie_i_tyle_samo_wej_co_przerzutnik_w_szeregowo_r_wnolegle_informacja_jest_wprowadzana_szeregowo_a_wyprowadzana_r_wnolegle_rejestr_ma_jedno_wej_cie_i_tyle_samo_wyj_co_przerzutnik_w"><![CDATA[Liczniki to układy sekwencyjne zbudowane z przerzutników symetrycznych, które służą do zliczania i zapamiętywania liczby impulsów podawanych na wejścia zliczające.  Rejestry to układy sekwencyjne zbudowane z przerzutników, służące do chwilowego przechowywania niewielkiej ilości danych. Ze względu na sposób zapisu i odczytu informacji rejestry dzielimy na: szeregowe (informacja wprowadzana jest bit po bicie, ten rejestr ma jedno wejście i jedno wyjście) równoległe (całe słowo jest wprowadzane jednocześnie, ten rejestr ma liczbę wejść i wyjść równą liczbie przerzutników) równoległo-szeregowe (informacja jest wprowadzana równolegle, a wyprowadzana szeregowo, rejestr ma jedno wyjście i tyle samo wejść co przerzutników) szeregowo-równolegle (informacja jest wprowadzana szeregowo, a wyprowadzana równolegle, rejestr ma jedno wejście i tyle samo wyjść co przerzutników) ]]></string>
    <string name="multiplekser_to_uk_ad_kombinacyjny_prze_czaj_cy_sygna_y_cyfrowe_demultiplekser_prze_cza_sygna_wyj_ciowy_na_okre_lone_wyj_cie_wybrane_za_pomoc_wej_adresowych_przerzutnik_to_uk_ad_sekwencyjny_kt_ry_s_u_y_do_zapami_tywania_jednego_bitu_informacji_dzielimy_je_na_asynchroniczne_i_synchroniczne_w_przerzutniku_asynchronicznym_zmiana_stanu_wej_mo_e_spowodowa_natychmiastow_zmian_stanu_wyj_w_przerzutniku_synchronicznym_stan_wyj_mo_e_si_w_nich_zmieni_tylko_w_okre_lonym_momencie_kt_re_s_wyznaczane_przez_aktywne_zbocze_przebiegu_czasowego_w_przerzutnikach_synchronicznych_wpis_do_przerzutnika_mo_e_by_wyzwalany_zboczem_dodatnim_narastaj_cym_zmiana_ze_stanu_niskiego_na_wysoki_oraz_przez_zbocze_ujemne_opadaj_ce_zmiana_ze_stanu_wysokiego_na_niski"><![CDATA[Multiplekser to układ kombinacyjny przełączający sygnały cyfrowe.  Demultiplekser przełącza sygnał wyjściowy na określone wyjście, wybrane za pomocą wejść adresowych.  Przerzutnik to układ sekwencyjny, który służy do zapamiętywania jednego bitu informacji. Dzielimy je na asynchroniczne i synchroniczne. W przerzutniku asynchronicznym zmiana stanu wejść może spowodować natychmiastową zmianę stanu wyjść. W przerzutniku synchronicznym stan wyjść może się w nich zmienić tylko w określonym momencie, które są wyznaczane przez aktywne zbocze przebiegu czasowego. W przerzutnikach synchronicznych wpis do przerzutnika może być wyzwalany zboczem dodatnim (narastającym) - zmiana ze stanu niskiego na wysoki oraz przez zbocze ujemne (opadające) - zmiana ze stanu wysokiego na niski.]]></string>
    <string name="budowa_jednostki_centralnej_komputera_1">Budowa jednostki centralnej komputera</string>

</resources>
