<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".arytmetyka">

    <TextView
        android:id="@+id/aryt"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@android:color/white"
        android:gravity="center"
        android:text="@string/arytmetyka_komputera1"
        android:textSize="30sp"
        app:fontFamily="sans-serif-smallcaps"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/arytmetyka_opis"
        android:layout_width="389dp"
        android:layout_height="99dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:background="@android:color/white"
        android:gravity="center_horizontal"
        android:paddingLeft="30dp"
        android:paddingTop="10dp"
        android:paddingRight="30dp"
        android:text="@string/najmniejsz_jednostk_informacji_przetwarzan_przez_komputery_jest_bit_reprezentuje_on_warto_ci_0_lub_1_bajt_to_osiem_bit_w"
        android:textSize="15sp"
        app:fontFamily="sans-serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aryt" />

    <ImageView
        android:layout_width="409dp"
        android:layout_height="308dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="1dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arytmetyka_opis"
        app:srcCompat="@drawable/arytmetyka_jednostki_danych"
        android:contentDescription="@string/todo" />

</android.support.constraint.ConstraintLayout>