<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".uklady">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/uklady"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@android:color/white"
                    android:gravity="center"
                    android:text="@string/uk_ady_cyfrowe_1"
                    android:textSize="30sp"
                    app:fontFamily="sans-serif-smallcaps"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/uklady_opis_1"
                    android:layout_width="wrap_content"
                    android:layout_height="151dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@android:color/white"
                    android:gravity="center_horizontal"
                    android:paddingLeft="30dp"
                    android:paddingTop="10dp"
                    android:paddingRight="30dp"
                    android:text="@string/uk_ady_cyfrowe_to_rodzaj_uk_ad_w_elektronicznych_w_kt_rych_sygna_y_napi_ciowe_przyjmuj_tylko_okre_lon_liczb_stan_w_z_przypisanymi_im_warto_ciami_liczbowymi_operacje_realizowane_przez_te_uk_ady_mo_emy_opisa_za_pomoc_j_zyka_logiki_matematycznej_zgodnie_z_algebr_boole_a"
                    android:textSize="15sp"
                    app:fontFamily="sans-serif"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/uklady" />

                <TextView
                    android:id="@+id/uklady_opis_2"
                    android:layout_width="389dp"
                    android:layout_height="151dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="15dp"
                    android:background="@android:color/white"
                    android:gravity="center_horizontal"
                    android:paddingLeft="30dp"
                    android:paddingTop="10dp"
                    android:paddingRight="30dp"
                    android:text="@string/mamy_dwa_typy_uk_ad_w_cyfrowych_uk_ady_kombinacyjne_sygna_y_wyj_ciowe_zmieniaj_si_w_chwili_zmian_sygna_w_wej_ciowych_a_ka_dy_stan_wej_okre_la_jednoznacznie_stan_wyj_cia_uk_ady_sekwencyjne_stan_wyj_zale_y_od_stanu_wej_oraz_poprzednich_stan_w_wej_zapami_tanych_w_uk_adzie"
                    android:textSize="15sp"
                    app:fontFamily="sans-serif"
                    tools:layout_editor_absoluteX="15dp"
                    tools:layout_editor_absoluteY="247dp" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="380dp"
                    android:layout_height="347dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="15dp"
                    android:contentDescription="@string/todo"
                    android:scaleType="centerInside"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:srcCompat="@drawable/uklady_1"
                    tools:layout_editor_absoluteY="405dp" />

                <TextView
                    android:id="@+id/trzy"
                    android:layout_width="389dp"
                    android:layout_height="380dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="15dp"
                    android:background="@android:color/white"
                    android:gravity="center_horizontal"
                    android:paddingLeft="30dp"
                    android:paddingTop="10dp"
                    android:paddingRight="30dp"
                    android:text="@string/multiplekser_to_uk_ad_kombinacyjny_prze_czaj_cy_sygna_y_cyfrowe_demultiplekser_prze_cza_sygna_wyj_ciowy_na_okre_lone_wyj_cie_wybrane_za_pomoc_wej_adresowych_przerzutnik_to_uk_ad_sekwencyjny_kt_ry_s_u_y_do_zapami_tywania_jednego_bitu_informacji_dzielimy_je_na_asynchroniczne_i_synchroniczne_w_przerzutniku_asynchronicznym_zmiana_stanu_wej_mo_e_spowodowa_natychmiastow_zmian_stanu_wyj_w_przerzutniku_synchronicznym_stan_wyj_mo_e_si_w_nich_zmieni_tylko_w_okre_lonym_momencie_kt_re_s_wyznaczane_przez_aktywne_zbocze_przebiegu_czasowego_w_przerzutnikach_synchronicznych_wpis_do_przerzutnika_mo_e_by_wyzwalany_zboczem_dodatnim_narastaj_cym_zmiana_ze_stanu_niskiego_na_wysoki_oraz_przez_zbocze_ujemne_opadaj_ce_zmiana_ze_stanu_wysokiego_na_niski"
                    android:textSize="15sp"
                    app:fontFamily="sans-serif"
                    tools:layout_editor_absoluteX="15dp"
                    tools:layout_editor_absoluteY="247dp" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="139dp"
                    android:contentDescription="@string/todo3"
                    android:paddingLeft="15dp"
                    android:paddingTop="20dp"
                    android:paddingRight="15dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/uklady_2" />

                <TextView
                    android:id="@+id/cztery"
                    android:layout_width="389dp"
                    android:layout_height="380dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="30dp"
                    android:background="@android:color/white"
                    android:gravity="center_horizontal"
                    android:paddingLeft="30dp"
                    android:paddingTop="10dp"
                    android:paddingRight="30dp"
                    android:text="@string/liczniki_to_uk_ady_sekwencyjne_zbudowane_z_przerzutnik_w_symetrycznych_kt_re_s_u_do_zliczania_i_zapami_tywania_liczby_impuls_w_podawanych_na_wej_cia_zliczaj_ce_rejestry_to_uk_ady_sekwencyjne_zbudowane_z_przerzutnik_w_s_u_ce_do_chwilowego_przechowywania_niewielkiej_ilo_ci_danych_ze_wzgl_du_na_spos_b_zapisu_i_odczytu_informacji_rejestry_dzielimy_na_szeregowe_informacja_wprowadzana_jest_bit_po_bicie_ten_rejestr_ma_jedno_wej_cie_i_jedno_wyj_cie_r_wnoleg_e_ca_e_s_owo_jest_wprowadzane_jednocze_nie_ten_rejestr_ma_liczb_wej_i_wyj_r_wn_liczbie_przerzutnik_w_r_wnoleg_o_szeregowe_informacja_jest_wprowadzana_r_wnolegle_a_wyprowadzana_szeregowo_rejestr_ma_jedno_wyj_cie_i_tyle_samo_wej_co_przerzutnik_w_szeregowo_r_wnolegle_informacja_jest_wprowadzana_szeregowo_a_wyprowadzana_r_wnolegle_rejestr_ma_jedno_wej_cie_i_tyle_samo_wyj_co_przerzutnik_w"
                    android:textSize="15sp"
                    app:fontFamily="sans-serif"
                    tools:layout_editor_absoluteX="15dp"
                    tools:layout_editor_absoluteY="247dp" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>